--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ pygments: true
 title : Jekyll Bootstrap
 tagline: Site Tagline
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
+  name : Roberto Lombi
+  email : signoramiailmio@robertodormepoco.org
+  github : robertodormepoco
   twitter : username
   feedburner : feedname
 
@@ -25,7 +25,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.io
+production_url : http://www.robertodormepoco.org
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
