--- a/_config.yml
+++ b/_config.yml
@@ -8,13 +8,13 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
+title : RobertoDormePoco
 tagline: Site Tagline
 author :
   name : Roberto Lombi
   email : signoramiailmio@robertodormepoco.org
   github : robertodormepoco
-  twitter : username
+  twitter : rbrtdrmpc
   feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
